--- a/src/main/webapp/frontend/public/index.html
+++ b/src/main/webapp/frontend/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Share your recipes on RecipeBook!"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <script src="https://use.fontawesome.com/b805f6c976.js"></script>
+    <link rel="icon" href="%PUBLIC_URL%/book.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"/>
   </head>
 
